k8s/excalidraw/05_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw-service
  namespace: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
